--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
 
 <body>
   <svg xmlns="http://www.w3.org/2000/svg" class="svg-icon-store">
+    <linearGradient id="green-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+      <stop offset="0%" stop-color="#60a14a" />
+      <stop offset="30%" stop-color="#60a14a" />
+      <stop offset="100%" stop-color="#98e37e" />
+    </linearGradient>
+
+    <linearGradient id="blue-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+      <stop offset="0%" stop-color="#82b7ff" />
+      <stop offset="50%" stop-color="#82b7ff" />
+      <stop offset="100%" stop-color="#a8d3ff" />
+    </linearGradient>
+
     <symbol id="i-facebook" viewBox="0 0 32 32">
       <path d="M19 6h5V0h-5c-3.86 0-7 3.14-7 7v3H8v6h4v16h6V16h5l1-6h-6V7c0-.542.458-1 1-1z" />
     </symbol>
@@ -73,7 +85,7 @@
         <div class="header__col header__col--nav">
           <nav class="nav">
 
-            <a class="nav__item" href="/">Инвестиции</a>
+            <a class="nav__item" href="/invest.html">Инвестиции</a>
 
             <a class="nav__item" href="/">Трейдинг</a>
 
@@ -121,11 +133,12 @@
       <div class="hero__slider">
 
         <div class="hero__slide " style="background-image: url(uploads/bitmap.jpg)">
-          <div class="hero__container ">
+          <div class="hero__container">
+
             <div class="hero__row">
               <div class="hero__column">
                 <div class="hero__data">
-                  <h2 class="hero__title">25 лет на фондовом рынке вместе с вами</h2>
+                  <h2 class="hero__title">25&nbsp;лет на&nbsp;фондовом рынке вместе с&nbsp;вами</h2>
                   <p class="hero__text">На&nbsp;протяжении многих лет мы&nbsp;стабильно входим в&nbsp;число шести крупнейших инвестиционных компаний России по&nbsp;величине собственного капитала.</p>
                 </div>
               </div>
@@ -170,7 +183,8 @@
         </div>
 
         <div class="hero__slide hero__slide--theme-dark" style="background-image: url(uploads/bitmap2.jpg)">
-          <div class="hero__container ">
+          <div class="hero__container">
+
             <div class="hero__row">
               <div class="hero__column">
                 <div class="hero__data">
@@ -219,7 +233,8 @@
         </div>
 
         <div class="hero__slide " style="background-image: url(uploads/bitmap.jpg)">
-          <div class="hero__container ">
+          <div class="hero__container">
+
             <div class="hero__row">
               <div class="hero__column">
                 <div class="hero__data">
@@ -642,7 +657,7 @@
     <div class="container">
       <div class="grid">
         <div class="grid__col grid__col--60">
-          <div class="poster poster--2by1 poster--text-large">
+          <div class="poster poster--text-large">
             <div class="poster__image" style="background-image: url(uploads/poster232323.jpg)"></div>
             <div class="poster__data">
               <div class="poster__data-inner">
